--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
       console.log('========================================');
       
       // Check URL
-      if (GOOGLE_SCRIPT_URL === 'YOUR_GOOGLE_APPS_SCRIPT_URL_HERE') {
+      if (GOOGLE_SCRIPT_URL === 'https://script.google.com/macros/s/AKfycbwqxPgoiE9skuTvkso6cv-mmFPoc0LRmqB1hqPPHvdQnJKWLlFIcUtqdzlsflNFqigy/exec') {
         console.error('❌ Google Script URL not configured!');
         alert('⚠️ Setup Required!\n\nPlease configure your Google Apps Script URL.\n\nSee setup instructions in the code or documentation.');
         return;
